# pinns_project

./: README.md  pyproject.toml
configs/: base.yaml
notebooks/: tuner.ipynb
src/app/: __init__.py  cli.py  evaluate.py  factory.py  infer_runner.py  train_runner.py
src/app/etl/: __init__.py  loaders.py  samplers.py
src/app/infer/: __init__.py  grids.py
src/app/pinn_heat/: configs.py  data.py  losses.py  models.py  nets.py  nondim.py  normalizers.py  run_variants.py  train.py
src/app/train/: __init__.py  loops.py
src/app/viz/: __init__.py  plots.py
