[tool.poetry]
name = "pinns"
version = "0.1.0"
description = ""
authors = ["Nicole Castroman <nicole.castroman@mercadolibre.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
matplotlib = "^3.10.3"
numpy = "^2.2.6"
torch = "^2.7.0"
torchvision = "^0.22.0"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
PyYAML = "^6.0.2"
imageio = "^2.37.0"
pyDOE = "^0.3.8"
plotly = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
